# micro-agent

./: .gitignore  LICENSE  README.md  dataset_scan.json  discovered_datasets.json  meetings.md  microscopy_api_research.md  microscopy_explorer.html  pyproject.toml  scan_datasets.py
examples/: download_subvolumes.py
mcp_servers/: bia_server.py  discovery_server.py  empiar_server.py  idr_server.py  microns_server.py  openorganelle_server.py  unified_server.py
micro_agent/: __init__.py  app.py  discover.py  downloader.py  loader.py  registry.py  validate.py  visualize.py
micro_agent/agent/: __init__.py  discovery_agent.py  llm.py  tools.py
micro_agent/backends/: __init__.py  base.py  bioimage.py  empiar.py  idr.py  microns.py  openorganelle.py  tensorswitch.py
micro_agent/catalog/: openorganelle.json
micro_agent/scanners/: __init__.py  allen.py  base.py  bia.py  bossdb.py  cell_image_lib.py  empiar.py  hpa.py  huggingface.py  idr.py  openalex.py  openorganelle.py  zenodo.py
tests/: conftest.py  test_backends.py  test_downloader.py  test_registry.py
trailhead/: __init__.py  app.py  discover.py  loader.py  registry.py  validate.py  visualize.py
trailhead/agent/: __init__.py  discovery_agent.py  llm.py  tools.py
trailhead/backends/: __init__.py  base.py  bioimage.py  empiar.py  idr.py  microns.py  openorganelle.py
trailhead/catalog/: microns.json
trailhead/scanners/: __init__.py  allen.py  base.py  bia.py  bossdb.py  cell_image_lib.py  empiar.py  hpa.py  huggingface.py  idr.py  openalex.py  openorganelle.py  zenodo.py
