[project]
authors = [{name = "David Ackerman", email = "ackermand@janelia.hhmi.org"}]
dependencies = [
    "numpy",
    "scipy",
    "tensorstore",
    "s3fs",
    "zarr>=2.16,<3",
    "httpx>=0.27.0",
    "neuroglancer",
]
description = "Cross-repository microscopy training data discovery and loading"
name = "trailhead"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["trailhead", "mcp_servers"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
trailhead = { path = ".", editable = true }

[tool.pixi.tasks]
demo = "python -c \"from trailhead import Registry; r = Registry(); hits = r.search(organelle='mito'); print(f'Found {len(hits)} datasets with mito segmentations:'); [print(f'  {h.id} ({h.repository}) - {h.title}') for h in hits]\""
view = "python -m trailhead.visualize"
explore = "python -m trailhead.app"
discover = "python -m trailhead.discover"
