[project]
authors = [{name = "David Ackerman", email = "ackermand@janelia.hhmi.org"}]
dependencies = [
    "numpy",
    "scipy",
    "tensorstore",
    "s3fs",
    "zarr>=2.16,<3",
    "httpx>=0.27.0",
    "neuroglancer",
]
description = "Cross-repository microscopy training data discovery and loading"
name = "micro_agent"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
fluorescence = ["bioio", "bioio-ome-tiff", "bioio-tifffile", "bioio-czi", "bioio-lif", "bioio-nd2"]
agent = ["anthropic", "litellm<1.81"]
tensorswitch = ["tensorswitch>=2.0.1"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["micro_agent", "mcp_servers"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
micro_agent = { path = ".", editable = true }
bioio = "*"
bioio-ome-tiff = "*"
bioio-tifffile = "*"

[tool.pixi.tasks]
demo = "python -c \"from micro_agent import Registry; r = Registry(); hits = r.search(organelle='mito'); print(f'Found {len(hits)} datasets with mito segmentations:'); [print(f'  {h.id} ({h.repository}) - {h.title}') for h in hits]\""
view = "python -m micro_agent.visualize"
explore = "python -m micro_agent.app"
discover = "python -m micro_agent.discover"
discover-agent = "python -m micro_agent.agent.discovery_agent"
download = "python -m micro_agent.downloader"
